--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,79 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-362.5KB/s(Youtube:不良林), server: sg0601.fans8.xyz, port: 443, type: trojan, password: 6dcfe99d-90ac-433d-9c8d-f952841ed740, sni: sg0601.fans8.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.88MB/s(Youtube:不良林), server: cdn2.myuuusss.com, port: 20011, type: ss, cipher: aes-128-gcm, password: b195963c-2631-442d-ab3a-6e78df25d904}
-  - {name: 🇯🇵 日本-345.8KB/s(Youtube:不良林), server: 51jp1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 51jp1.fans8.xyz}}
   - {name: 🇰🇷 韩国-326.2KB/s(Youtube:不良林), server: 146.56.108.108, port: 26113, type: vmess, uuid: 1071810b-8a51-4fba-de7f-1efe88c87ea8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-2.25MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇨🇳 中国-362.5KB/s(Youtube:不良林), server: sg0601.fans8.xyz, port: 443, type: trojan, password: 6dcfe99d-90ac-433d-9c8d-f952841ed740, sni: sg0601.fans8.xyz, skip-cert-verify: true}
   - {name: 🇷🇺 俄罗斯联邦-1.27MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇭🇰 香港-3.36MB/s(Youtube:不良林), server: 511hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 511hk.fans8.xyz}}
+  - {name: 🇨🇳 台湾-1.55MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇦🇺 澳大利亚-612.4KB/s(Youtube:不良林), server: neteasy.ga, port: 28931, type: trojan, password: MnROfwtPYa, sni: neteasy.ga, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-700.4KB/s(Youtube:不良林), server: 134.195.196.231, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇺🇸 美国-2.24MB/s(Youtube:不良林), server: 62.216.91.229, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
+  - {name: 乌克兰-1.50MB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-362.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
-      - 🇯🇵 日本-345.8KB/s(Youtube:不良林)
       - 🇰🇷 韩国-326.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-362.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.27MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.36MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.55MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-612.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-700.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
+      - 乌克兰-1.50MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-362.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
-      - 🇯🇵 日本-345.8KB/s(Youtube:不良林)
       - 🇰🇷 韩国-326.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-362.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.27MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.36MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.55MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-612.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-700.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
+      - 乌克兰-1.50MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-362.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
-      - 🇯🇵 日本-345.8KB/s(Youtube:不良林)
       - 🇰🇷 韩国-326.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-362.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.27MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.36MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.55MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-612.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-700.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
+      - 乌克兰-1.50MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-3.36MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.55MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-362.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
-      - 🇯🇵 日本-345.8KB/s(Youtube:不良林)
       - 🇰🇷 韩国-326.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-362.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.27MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.36MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.55MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-612.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-700.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
+      - 乌克兰-1.50MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-362.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
-      - 🇯🇵 日本-345.8KB/s(Youtube:不良林)
       - 🇰🇷 韩国-326.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-362.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.27MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.36MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.55MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-612.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-700.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
+      - 乌克兰-1.50MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-362.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
-      - 🇯🇵 日本-345.8KB/s(Youtube:不良林)
       - 🇰🇷 韩国-326.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-362.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.27MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.36MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.55MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-612.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-700.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
+      - 乌克兰-1.50MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -93,11 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-362.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.88MB/s(Youtube:不良林)
-      - 🇯🇵 日本-345.8KB/s(Youtube:不良林)
       - 🇰🇷 韩国-326.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-362.5KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.27MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.36MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.55MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-612.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-700.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
+      - 乌克兰-1.50MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
