--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 台湾-1.55MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇷🇺 俄罗斯联邦-1.27MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇭🇰 香港-3.36MB/s(Youtube:不良林), server: 511hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 511hk.fans8.xyz}}
-  - {name: 🇷🇺 俄罗斯联邦-2.25MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇺🇸 美国-2.79MB/s(Youtube:不良林), server: usa003.369boy.com, port: 13011, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, sni: usa003.369boy.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.60MB/s(Youtube:不良林), server: 2.tiantang.cf, port: 51119, type: trojan, password: oJjnDA3ycC, sni: 2.tiantang.cf, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.18MB/s(Youtube:不良林), server: 138.2.127.240, port: 44600, type: trojan, password: 2971161c-46af-4ac3-b9c3-409b2750a751, skip-cert-verify: true}
   - {name: 🇨🇳 中国-449.8KB/s(Youtube:不良林), server: sg0601.fans8.xyz, port: 443, type: trojan, password: 6dcfe99d-90ac-433d-9c8d-f952841ed740, sni: sg0601.fans8.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-700.4KB/s(Youtube:不良林), server: 134.195.196.231, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇺🇸 美国-2.24MB/s(Youtube:不良林), server: 62.216.91.229, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
-  - {name: 乌克兰-1.50MB/s(Youtube:不良林), server: 422wkl.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 422wkl.fans8.xyz}}
-  - {name: 🇬🇧 英国-1.90MB/s(Youtube:不良林), server: 152.89.210.105, port: 9084, type: ss, cipher: aes-256-cfb, password: c3NtHJ5ujV2tGDfj}
-  - {name: 🇺🇸 美国-320.8KB/s(Youtube:不良林), server: 54.214.170.7, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇺🇸 美国-366.7KB/s(Youtube:不良林), server: oz.moonfree.top, port: 443, type: vmess, uuid: 9fbb6122-46e7-413b-b29d-749eef446c8d, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: oz.moonfree.top}}
+  - {name: 🇨🇳 中国-382.0KB/s(Youtube:不良林), server: cdn2.myuuusss.com, port: 20011, type: ss, cipher: aes-128-gcm, password: b195963c-2631-442d-ab3a-6e78df25d904}
+  - {name: 🇺🇸 美国-3.77MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.57MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-560.6KB/s(Youtube:不良林), server: 185.167.117.171, port: 9040, type: ss, cipher: aes-256-cfb, password: p9z5BVADH2YFs3MN}
+  - {name: 🇭🇰 香港-3.85MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 台湾-1.55MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.27MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.36MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.18MB/s(Youtube:不良林)
       - 🇨🇳 中国-449.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-700.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
-      - 乌克兰-1.50MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-320.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-366.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-382.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-560.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.85MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 台湾-1.55MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.27MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.36MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.18MB/s(Youtube:不良林)
       - 🇨🇳 中国-449.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-700.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
-      - 乌克兰-1.50MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-320.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-366.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-382.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-560.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.85MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 台湾-1.55MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.27MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.36MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.18MB/s(Youtube:不良林)
       - 🇨🇳 中国-449.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-700.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
-      - 乌克兰-1.50MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-320.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-366.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-382.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-560.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.85MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-1.55MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.36MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.85MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 台湾-1.55MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.27MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.36MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.18MB/s(Youtube:不良林)
       - 🇨🇳 中国-449.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-700.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
-      - 乌克兰-1.50MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-320.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-366.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-382.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-560.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.85MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 台湾-1.55MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.27MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.36MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.18MB/s(Youtube:不良林)
       - 🇨🇳 中国-449.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-700.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
-      - 乌克兰-1.50MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-320.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-366.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-382.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-560.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.85MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 台湾-1.55MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.27MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.36MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.18MB/s(Youtube:不良林)
       - 🇨🇳 中国-449.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-700.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
-      - 乌克兰-1.50MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-320.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-366.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-382.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-560.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.85MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 台湾-1.55MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.27MB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.36MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.18MB/s(Youtube:不良林)
       - 🇨🇳 中国-449.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-700.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.24MB/s(Youtube:不良林)
-      - 乌克兰-1.50MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.90MB/s(Youtube:不良林)
-      - 🇺🇸 美国-320.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-366.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-382.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.57MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-560.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.85MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
