--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,118 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-1.49MB/s(Youtube:不良林), server: 134.195.196.231, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-4.81MB/s(Youtube:不良林), server: usa003.369boy.com, port: 13011, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, sni: usa003.369boy.com, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-560.6KB/s(Youtube:不良林), server: 185.167.117.171, port: 9040, type: ss, cipher: aes-256-cfb, password: p9z5BVADH2YFs3MN}
-  - {name: 🇨🇦 加拿大-1.96MB/s(Youtube:不良林), server: 134.195.196.231, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇨🇦 加拿大-2.94MB/s(Youtube:不良林), server: 134.195.196.231, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇬🇧 英国-2.47MB/s(Youtube:不良林), server: 152.89.210.84, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
-  - {name: 🇬🇧 英国-2.66MB/s(Youtube:不良林), server: 152.89.210.105, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
-  - {name: 🇬🇧 英国-2.87MB/s(Youtube:不良林), server: 152.89.210.105, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
-  - {name: 🇮🇳 印度-3.11MB/s(Youtube:不良林), server: jgwhdlb2.gaox.ml, port: 443, type: trojan, password: 54080134-2cba-4535-8599-95650bd9aa54, sni: jgwhdlb2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-361.3KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇬🇧 英国-2.35MB/s(Youtube:不良林), server: 152.89.210.105, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇷🇺 俄罗斯联邦-860.4KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇬🇧 英国-1.74MB/s(Youtube:不良林), server: 152.89.210.105, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
+  - {name: 🇦🇺 澳大利亚-945.6KB/s(Youtube:不良林), server: 185.167.117.171, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
+  - {name: 🇯🇵 日本-20.57MB/s(Youtube:不良林), server: 51jp1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 51jp1.fans8.xyz}}
+  - {name: 🇨🇳 中国-9.13MB/s(Youtube:不良林), server: cdn2.myuuusss.com, port: 20011, type: ss, cipher: aes-128-gcm, password: b195963c-2631-442d-ab3a-6e78df25d904}
+  - {name: 🇭🇰 香港-15.48MB/s(Youtube:不良林), server: 20.187.79.61, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-14.05MB/s(Youtube:不良林), server: 20.187.100.205, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-3.11MB/s(Youtube:不良林), server: mshk1.369boy.com, port: 10501, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, sni: mshk1.369boy.com, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-12.99MB/s(Youtube:不良林), server: 20.187.79.61, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-560.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.94MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.47MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.66MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.87MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-361.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.35MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-860.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.74MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-945.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.13MB/s(Youtube:不良林)
+      - 🇭🇰 香港-15.48MB/s(Youtube:不良林)
+      - 🇭🇰 香港-14.05MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.11MB/s(Youtube:不良林)
+      - 🇭🇰 香港-12.99MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-560.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.94MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.47MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.66MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.87MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-361.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.35MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-860.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.74MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-945.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.13MB/s(Youtube:不良林)
+      - 🇭🇰 香港-15.48MB/s(Youtube:不良林)
+      - 🇭🇰 香港-14.05MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.11MB/s(Youtube:不良林)
+      - 🇭🇰 香港-12.99MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-560.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.94MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.47MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.66MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.87MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-361.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.35MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-860.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.74MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-945.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.13MB/s(Youtube:不良林)
+      - 🇭🇰 香港-15.48MB/s(Youtube:不良林)
+      - 🇭🇰 香港-14.05MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.11MB/s(Youtube:不良林)
+      - 🇭🇰 香港-12.99MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-15.48MB/s(Youtube:不良林)
+      - 🇭🇰 香港-14.05MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.11MB/s(Youtube:不良林)
+      - 🇭🇰 香港-12.99MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-560.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.94MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.47MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.66MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.87MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-361.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.35MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-860.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.74MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-945.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.13MB/s(Youtube:不良林)
+      - 🇭🇰 香港-15.48MB/s(Youtube:不良林)
+      - 🇭🇰 香港-14.05MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.11MB/s(Youtube:不良林)
+      - 🇭🇰 香港-12.99MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-560.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.94MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.47MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.66MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.87MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-361.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.35MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-860.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.74MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-945.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.13MB/s(Youtube:不良林)
+      - 🇭🇰 香港-15.48MB/s(Youtube:不良林)
+      - 🇭🇰 香港-14.05MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.11MB/s(Youtube:不良林)
+      - 🇭🇰 香港-12.99MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-560.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.94MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.47MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.66MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.87MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-361.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.35MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-860.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.74MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-945.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.13MB/s(Youtube:不良林)
+      - 🇭🇰 香港-15.48MB/s(Youtube:不良林)
+      - 🇭🇰 香港-14.05MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.11MB/s(Youtube:不良林)
+      - 🇭🇰 香港-12.99MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +132,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.81MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-560.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.94MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.47MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.66MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.87MB/s(Youtube:不良林)
-      - 🇮🇳 印度-3.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-361.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.35MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-860.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.74MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-945.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-20.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.13MB/s(Youtube:不良林)
+      - 🇭🇰 香港-15.48MB/s(Youtube:不良林)
+      - 🇭🇰 香港-14.05MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.11MB/s(Youtube:不良林)
+      - 🇭🇰 香港-12.99MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
